<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/white_background2"
    android:paddingVertical="75dp"
    android:paddingHorizontal="50dp"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_message"
      android:textColor="@color/white"
      android:textSize="35sp"
      android:textStyle="bold" />

  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:layout_marginTop="160dp"/>

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:inputType="textPassword"/>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/realLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:layout_marginTop="10dp"
      android:textColor="@android:color/darker_gray"
      android:background="@drawable/gradient_stroke_button" />

</LinearLayout>